Common_3/Graphics/Interfaces/IGraphicsTides.zig

// auto generated by c2z
const std = @import("std");
const zgraphics = @import("IGraphics.zig");
//const cpp = @import("cpp");

pub const TIDES_SPACE_DESCRIPTORS_MAX_COUNT: u32 = 8;
pub const TIDES_DESCRIPTOR_SPACES_COUNT: u32 = 5;

pub const SpaceDescriptors = extern struct {
    mDescriptorsCount: u32,
    pDescriptors: [TIDES_SPACE_DESCRIPTORS_MAX_COUNT]zgraphics.Descriptor,
};

pub const Descriptors = extern struct {
    pSpaceDescriptors: [TIDES_DESCRIPTOR_SPACES_COUNT]SpaceDescriptors,
};

pub const SubResourceDataDesc = extern struct {
    mSrcOffset: u64,
    mMipLevel: u32,
    mArrayLayer: u32,
};

pub extern fn initGPUConfigurationEx(pExtendedSettings: [*c]zgraphics.ExtendedSettings) void;
pub extern fn exitGPUConfigurationEx() void;
pub extern fn addTextureEx(pRenderer: [*c]zgraphics.Renderer, pTextureDesc: [*c]const zgraphics.TextureDesc, bBindless: bool, texture: [*c][*c]zgraphics.Texture) void;
pub extern fn removeTextureEx(pRenderer: [*c]zgraphics.Renderer, pTexture: [*c]zgraphics.Texture) void;
pub extern fn addBufferEx(pRenderer: [*c]zgraphics.Renderer, pDesc: [*c]const zgraphics.BufferDesc, bBindless: bool, ppBuffer: [*c][*c]zgraphics.Buffer) void;
pub extern fn removeBufferEx(pRenderer: [*c]zgraphics.Renderer, pBuffer: [*c]zgraphics.Buffer) void;
pub extern fn cmdUpdateBufferEx(pCmd: [*c]zgraphics.Cmd, pBuffer: [*c]zgraphics.Buffer, dstOffset: u64, pSrcBuffer: [*c]zgraphics.Buffer, srcOffset: u64, size: u64) void;
pub extern fn cmdUpdateSubresourceEx(pCmd: [*c]zgraphics.Cmd, pTexture: [*c]zgraphics.Texture, pSrcBuffer: [*c]zgraphics.Buffer, pSubresourceDesc: [*c]SubResourceDataDesc) void;
pub extern fn cmdCopySubresourceEx(pCmd: [*c]zgraphics.Cmd, pDstBuffer: [*c]zgraphics.Buffer, pTexture: [*c]zgraphics.Texture, pSubresourceDesc: [*c]SubResourceDataDesc) void;
pub extern fn loadDefaultRootSignatures(pRenderer: [*c]zgraphics.Renderer, graphicsRootSignaturePath: [*c]const u8, computeRootSignaturePath: [*c]const u8) bool;
pub extern fn releaseDefaultRootSignatures(pRenderer: [*c]zgraphics.Renderer) void;
pub extern fn getWindowSize(windowHandle: zgraphics.WindowHandle, pWidth: *u32, pHeight: *u32) void;
pub extern fn createShaderDescriptors(pShaderProgram: [*c]zgraphics.Shader, descriptors: [*c]Descriptors, pThreadGroupSizeX: *u32, pThreadGroupSizeY: *u32, pThreadGroupSizeZ: *u32) void;
pub extern fn removeShaderDescriptors(ppDescriptors: [*c]Descriptors) void;
pub extern fn queueWaitForFence(pQueue: [*c]zgraphics.Queue, pFence: [*c]zgraphics.Fence) void;
